--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: passwords.streamdata.gallery
 tag: Passwords
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery
+github_user: streamdata-gallery-topics
 github_repo: passwords
 github_branch: master
 collections:
